--- a/react_intro/task_1/dashboard/src/Notifications.css
+++ b/react_intro/task_1/dashboard/src/Notifications.css
@@ -1,6 +1,8 @@
-.Notifications {
+.notifications {
     padding: 20px;
     border: 4px var(--color-red) solid;
+    border-style: dotted;
+    margin: 20px;
   
-    font-size: 24px;
+    font-size: 32px;
   }
